# local_models

./: .gitignore  README.dataset.txt  README.md  README.roboflow.txt  config.json  data_loader.py  inference.py  main.py  package-lock.json  package.json  pyproject.toml  run.ipynb  run.py  train_lora.py
local_models.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
predictions/: evaluation_metrics.json  test_results.json
predictions_checkpoint200/: evaluation_metrics.json  test_results.json
predictions_finetuned/: evaluation_metrics.json  test_results.json
